# vfs.smb

./: CMakeLists.txt  FindLibSmbClient.cmake
src/: SMB.cpp  SMB.h  SMBFile.cpp
vfs.smb/: addon.xml
